--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,4 @@
 # Menu navigation links
 
-- title: Theme Setup
-  url: /theme-setup/
-
-- title: External Link
-  url: http://mademistakes.com
+- title: GitHub
+  url: https://github.com/zhqherm
