--- a/_config.yml
+++ b/_config.yml
@@ -4,21 +4,19 @@ permalink:           pretty
 # Setup
 title:               Progress
 tagline:             A responsive blog theme that illustrates reading progress. Suited for continous reading.
-url:                 http://alexanderussell.github.io
+url:                 https://zhqherm.github.io/
 baseurl:             /progress-for-jekyll
 analytics_id:
 
 # Owner/author information
 owner:
-  name:           Alex Russell
+  name:           Herm
   avatar:         avatar.png
   bio:            "Designer."
-  email:          alex@collectivelymade.com
+  email:          zhq204@qq.com
   twitter:        alexanderussell
-  github:         alexanderussell
-  instagram:      alexanderussell
-  dribbble:       alexanderussell
-  location:       "Lincoln, NE"
+  github:         zhqherm
+  location:       "GZ, China"
 
 
 # Custom vars
