--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,9 +6,6 @@
   href: "/about"
 - title: Archive
   href: "/archive"
-- title: Donate
-  href: "https://flattr.com/profile/alexanderussell"
-  external: true
-- title: Alex Who?
-  href: "http://alexanderussell.org"
+- title: GitHub
+  href: "https://github.com/zhqherm"
   external: true
